tests/snapshots/parse_standard__snapshot_from_node_graph.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source: NodeGraph
  scope: ~
  conditions: ~
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments: []
  during: ~
