tests/snapshots/parse_standard__snapshot_lifecycle_anchor.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Logs
  robot_scope: ~
  conditions: ~
  facet: ~
  time_range:
    Since:
      Anchor: LastActionFailure
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
