tests/snapshots/parse_standard__snapshot_limit_offset.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Logs
  robot_scope: ~
  conditions: ~
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: 20
  offset: 40
  output_format: ~
  baseline: ~
