tests/snapshots/parse_standard__snapshot_offset_only.snap
---
source: tests/parse_standard.rs
assertion_line: 97
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Logs
  scope: ~
  conditions: ~
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: ~
  offset: 10
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments: []
  during: ~
