tests/snapshots/parse_standard__snapshot_select_star.snap
---
source: tests/parse_standard.rs
assertion_line: 14
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Traces
  scope: ~
  conditions: ~
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments: []
  during: ~
