tests/snapshots/parse_standard__snapshot_timeseries_1_hour.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Traces
  scope: ~
  conditions: ~
  facet: ~
  time_range:
    Since:
      Relative:
        amount: 24
        unit: hours
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries:
    interval:
      raw_value: 1
      unit: h
      si_value: 3600
      si_unit: s
  enrichments: []
